--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --reporter spec"
   },
   "dependencies": {
+    "angular-chart.js": "^1.1.1",
     "angular-ui-router": "^0.4.3",
     "bcrypt-nodejs": "*",
     "body-parser": "*",
