--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.5.7",
     "express": "*",
     "express3-handlebars": "~0.5.0",
+    "intercom-client": "^2.9.1",
     "json-socket": "*",
     "morgan": "*",
     "multer": "~0.1.6",
